--- a/OpenGLTexture/OpenGLTexture.vcxproj.filters
+++ b/OpenGLTexture/OpenGLTexture.vcxproj.filters
@@ -69,5 +69,6 @@
     <Image Include="OpenGLTexture.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="test.tga" />
   </ItemGroup>
 </Project>
